[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.11.0"
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.49.0", features = ["full"] }
